package View;

import Enities.DiceCup.DiceCup;
import Enities.Fields.Field;
import Enities.Player;

public class TestView implements View {
    @Override
    public void addPlayersToGui(Player[] players) {

    }

    @Override
    public void updateDie(DiceCup diceCup) {

    }

    @Override
    public void updatePlayerBalances(Player[] players) {

    }

    @Override
    public void updatePlayerLocations(Player[] players) {

    }

    @Override
    public void showMessage(String string) {
        System.out.println(string);
    }

    @Override
    public void update(Player[] players, Field[] fields, DiceCup diceCup) {

    }

    @Override
    public void updateHouses(Field[] fields) {

    }

    @Override
    public String promptPlayer(String[] choices, String playerName) {
        return "No";
    }

    @Override
    public int promptPlayerCount(String msg, int min, int max) {
        return 2;
    }
}
